Closed Bug 1933998 Opened 1 year ago Closed 1 year ago

[Windows] Profile not fully deleted from local directory

Categories

(Toolkit :: Startup and Profile System, defect, P1)

Firefox 135
Desktop
Windows
defect

Tracking

()

VERIFIED FIXED
138 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox133 --- unaffected
firefox134 --- disabled
firefox135 --- disabled
firefox137 --- disabled
firefox138 --- verified

People

(Reporter: sbadau, Assigned: jhirsch)

References

(Blocks 1 open bug)

Details

(Whiteboard: [fidefe-profile-management])

Attachments

(1 file)

Found in

  • Nightly 135.0a1

Affected versions

  • Nightly 135.0a1
  • Firefox 134.0b2

Tested platforms

  • Affected platforms: Windows 10, Windows 11
  • Unaffected platforms: macOS 15

Preconditions

  • Set the pref "browser.profiles.enabled" to "true" in about:config and create one profile (Profile 1).

Steps to reproduce

  1. Launch Profile 1, open the Profiles panel and click on Edit.
  2. Click on the Delete button.
  3. On the about:deleteprofile page, click the Delete button.
  4. Return to the Profiles panel and check the profiles list.
  5. Navigate to AppData\Roaming\Mozilla\Firefox\Profiles and inspect the profiles list.

Expected result

  • Profile 1 should be deleted from both the Profiles panel from Firefox and the local directory.

Actual result

  • Profile 1 is not fully deleted from the local profile directory.

Regression range

  • This is not a regression, it's introduced with the Profile Switching feature.

Additional notes

  • Profile 1 directory still contains a 'saved-telemetry-pings' folder and a parent.lock file.
Whiteboard: [fidefe-profile-management]

I'm not sure if these last few files can actually be deleted. Thoughts?

Flags: needinfo?(dtownsend)

I don't know why they wouldn't be deletable.

Flags: needinfo?(dtownsend)

The severity field is not set for this bug.
:mossop, could you have a look please?

For more information, please visit BugBot documentation.

Flags: needinfo?(dtownsend)
Severity: -- → S3
Flags: needinfo?(dtownsend)

I'm no longer able to reproduce this bug on Windows 11. Could you verify that it's still reproducible?

Flags: needinfo?(sbadau)

(In reply to Jared Hirsch [:jhirsch] (he/him) (Needinfo please) from comment #4)

I'm no longer able to reproduce this bug on Windows 11. Could you verify that it's still reproducible?

I can still reproduce this issue. I tried using the latest Nightly 137.0a1 (Build ID: 20250220214610). The profile folder, which contains a "saved-telemetry-pings" folder and a parent.lock file, is not deleted from AppData\Roaming\Mozilla\Firefox\Profiles.

I also checked AppData\Local\Mozilla\Firefox\Profiles, and indeed, the profile folder is entirely deleted from this location.

Flags: needinfo?(sbadau)
Assignee: nobody → jhirsch
Status: NEW → ASSIGNED
Priority: -- → P1

Reading back through the changes in D222058, I was reminded that we don't retry deletion of leftover files because of a now-closed bug.

For an initial attempt, trying to just add some retries. Building this on windows now, will try it out next week.

Attachment #9470414 - Attachment description: WIP: Bug 1933998 - WIP - Enable retries and see if that handles leftover files → Bug 1933998 - Enable profile deletion task to retry deleting leftover files r?mossop!,#profiles-reviewers
Attachment #9470414 - Attachment description: Bug 1933998 - Enable profile deletion task to retry deleting leftover files r?mossop!,#profiles-reviewers → Bug 1933998 - Retry deleting leftover files in the profile deletion background task r?mossop!,#profiles-reviewers
Pushed by jhirsch@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/7e046707e349 Retry deleting leftover files in the profile deletion background task r=mossop,profiles-reviewers
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 138 Branch
Flags: qe-verify+

Verified as fixed using Firefox 138.0b1 and the latest Nightly 139.0a1 on Windows 11 - the folder of the deleted profile is no longer present in the Profiles folder.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: