Bug 1933998 - Retry deleting leftover files in the profile deletion background task r=mossop,profiles-reviewers

Deletion retries were blocked on bug 1716291, which is now fixed.

Differential Revision: https://phabricator.services.mozilla.com/D240706